--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,7 @@
-
+#Configurando la consola de la base enbebida H2
+#Credenciales para acceder a la base de datos H2
+spring.datasource.url=jdbc:h2:mem:clientesdb
+spring.datasource.username=cesar
+spring.datasource.password=sa
+spring.datasource.driver-class-name=org.h2.Driver
+spring.h2.console.enabled=true
