Cambiando Datasourse a MySQL en application.properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,15 @@
-#Configurando la consola de la base enbebida H2
-#Credenciales para acceder a la base de datos H2
-spring.datasource.url=jdbc:h2:mem:clientesdb
-spring.datasource.username=cesar
-spring.datasource.password=sa
-spring.datasource.driver-class-name=org.h2.Driver
-spring.h2.console.enabled=true
+#Configurar la conexion de las bases de datos
+#parametros: para configurar la zona horaria donde se implementa el desarrollo serverTimezone=America /Mexico_City
+# Parametro: useSSL=false en caso de tener problemas con el SSL
+spring.datasource.url=jdbc:mysql://localhost/db_springboot?serverTimezone=America/Mexico_City&useSSL=false
+spring.datasource.username=root
+spring.datasource.password=123456
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
+#Esta configuración solo debe estar activa en desarrollo,
+#En producción ya se debe de tener las bases de datos creadas
+spring.jpa.hibernate.ddl-auto=create-drop
+
+#Configuracón que permte que se muestren 
+#las consultas de manera nativa en la consola
+logging.level.org.hibernate.SQL=debug
