--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,15 +1,11 @@
-#Configurar la conexion de las bases de datos
-#parametros: para configurar la zona horaria donde se implementa el desarrollo serverTimezone=America /Mexico_City
-# Parametro: useSSL=false en caso de tener problemas con el SSL
 spring.datasource.url=jdbc:mysql://localhost/db_springboot?serverTimezone=America/Mexico_City&useSSL=false
 spring.datasource.username=root
 spring.datasource.password=123456
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
-#Esta configuración solo debe estar activa en desarrollo,
-#En producción ya se debe de tener las bases de datos creadas
 spring.jpa.hibernate.ddl-auto=create-drop
-
-#Configuracón que permte que se muestren 
-#las consultas de manera nativa en la consola
 logging.level.org.hibernate.SQL=debug
+
+#Se configura el máximo de megasbytes del tamaño de la foto que va permitir subir la aplicación
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=10MB
