--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:mysql://localhost/db_springboot?serverTimezone=America/Mexico_City&useSSL=false
+spring.datasource.url=jdbc:mysql://localhost:3307/db_springboot?serverTimezone=America/Mexico_City&useSSL=false
 spring.datasource.username=root
 spring.datasource.password=123456
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
